# ChangeLog for x11-base/nouveau-drm
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/nouveau-drm/ChangeLog,v 1.11 2010/08/12 09:56:15 chithanh Exp $

*nouveau-drm-20100811 (12 Aug 2010)

  12 Aug 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -nouveau-drm-20100226.ebuild, -nouveau-drm-20100316.ebuild,
  +nouveau-drm-20100811.ebuild:
  New snapshot. Remove old.

*nouveau-drm-20100520 (21 May 2010)

  21 May 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +nouveau-drm-20100520.ebuild:
  New snapshot, fixes bug #320811

  23 Mar 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  nouveau-drm-20100316.ebuild:
  Warn against more kernel fb drivers, bug #310653

*nouveau-drm-20100316 (16 Mar 2010)

  16 Mar 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -nouveau-drm-20100216.ebuild, -nouveau-drm-20100221.ebuild,
  -nouveau-drm-20100222.ebuild, +nouveau-drm-20100316.ebuild:
  new snapshot, remove old

  16 Mar 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  nouveau-drm-20100226.ebuild:
  remove warning about vesafb, handover is implemented now

*nouveau-drm-20100226 (27 Feb 2010)

  27 Feb 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +nouveau-drm-20100226.ebuild:
  new snapshot, no longer needs firmware for NV50

*nouveau-drm-20100222 (22 Feb 2010)

  22 Feb 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +nouveau-drm-20100222.ebuild:
  yet another new snapshot, reportedly works with newer IGPs

*nouveau-drm-20100221 (21 Feb 2010)

  21 Feb 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +nouveau-drm-20100221.ebuild:
  new snapshot

  18 Feb 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -nouveau-drm-20100212.ebuild:
  remove old

*nouveau-drm-20100216 (17 Feb 2010)

  17 Feb 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +nouveau-drm-20100216.ebuild:
  new snapshot
